Refactor submission template code to use new result structure